Add support for QR-TAN

BUG: 437452
FIXED-IN: 5.1.2

(cherry picked from commit f45e030f61411d1833aeb3232f73cb9560842f5b)